fix: resolve inline command button vertical alignment issue

--- a/styles/scss/global/_inline.scss
+++ b/styles/scss/global/_inline.scss
@@ -83,10 +83,12 @@ a.inline-roll {
 .inline {
 	display: inline-flex;
 	gap: 0.025em;
-	align-items: center;
+	align-items: baseline;
 
 	img {
 		border: none;
+		position: relative;
+		top: 3px;
 	}
 
 	&.broken {
